# Rocket-Chip

./: .clang-tidy  .gitattributes  .gitignore  .gitmodules  .graphifyignore  AGENTS.md  AGENT_WHITEBOARD.md  CHANGELOG.md  CLI_RESTORE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  CROSS_AGENT_REVIEW.md  DEVELOPMENT.md  FreeRTOSConfig.h  FreeRTOS_Kernel_import.cmake  GETTING_STARTED.md  HARDWARE.md  LICENSE  MIGRATION_SUMMARY.md  Makefile  PERFORMANCE_ANALYSIS.md  PERFORMANCE_ISSUES_SUMMARY.md  PHASE0_BASELINE_2026-05-27.md  PLAN.md  PROJECT_OVERVIEW.md  PROJECT_STATUS.md  README.md  THIRD_PARTY_LICENSES.md  build.sh  hardware_info.yaml  ivp27_28_log.txt  openocd_cmsis_dap.cfg  pico_sdk_import.cmake
,Agent_Instructions/: CROSS_AGENT_REVIEW.md  PROJECT_OVERVIEW.md  README.md  STANDARDS.md
.Agent_Instructions/: CHANGELOG.md  HARDWARE.md  REVIEW_FLAGS.md
.claude/: AK_GUIDELINES.md  CLAUDE.md  COMPASS_CAL_IMPLEMENTATION.md  DEBUG_PROBE_NOTES.md  FREERTOS_INTEGRATION_STATUS.md  LESSONS_LEARNED.md  PROTECTED_FILES.md  SESSION_CHECKLIST.md  settings.json
.cursor/rules/: graphify.mdc
.github/workflows/: python-scripts-ci.yml
.grok/hooks/: protected-pretool.json
2025/: 3-10.txt
Agent_Instructions/: CHANGELOG.md  COUNCIL_PROCESS.md  CROSS_AGENT_REVIEW.md  HARDWARE.md  PROJECT_STATUS.md  README.md
DEPRECATED/: DEPENDENCY_AUDIT.md  hardware_info.yaml
DEPRECATED/Grok/: serial_dump.txt
DEPRECATED/docs/: QUICKSTART.md
Datalog/: Datalog.ino
Datalogger/: Datalogger.ino
Docs/: SAD.md  SCAFFOLDING.md
GPT testing/RC_Gemeni/: RC_Gemeni.ino
OLD-Datalogger/: OLD-Datalogger.ino
Testing/: rc_log_drain_measure.py
ahrs_10dof-RocketChip/: ahrs_10dof-RocketChip.ino
bmp280test/: bmp280test.ino
chibios/: PROGRESS.md  README.md
chibios/docs/: KNOWN_ISSUES.md  (+1 more)
docs/: ADVANCED_SETTINGS.md  AO_ARCHITECTURE.md  AP_CAL.md  AP_FEATURE_FLAGS.md  AP_HAL_RP2350_PLAN.md  BENCH_TEST_PROCEDURE.md  BOARD_FIRMWARE_VERIFICATION.md  BUILD_SYSTEM_AUDIT.md  CC_HANDOFF.md  CHIBIOS_MIGRATION.md  CONFIG_TEST_MATRIX.md  DYNAMIC_VALIDATION.md  ESKF_TESTING_GUIDE.md  FAULT_INJECTION.md  FLASHING.md  FREERTOS_PATH_EVALUATION.md  GEMINI_CARRIER_BOARD.md  HARDWARE.md  HARDWARE_BUDGETS.md  IVP.md  MULTICORE_RULES.md  PD12_FIX_OPTIONS.md  PHASE5_ESKF_PLAN.md  PRE_FLIGHT_CHECKLIST.md  PROBLEM_REPORTS.md  PROJECT_OVERVIEW.md  PROJECT_STATUS.md  RADIO_TELEMETRY_STATUS.md  RADIO_TESTING_RESULTS.md  README.md  ROCKETCHIP_OS.md  RP2350_FULL_AP_PORT.md  SAD.md  SCAFFOLDING.md  SENSOR_ARCHITECTURE.md  SEQLOCK_STRUCT_LAYOUT.md  STATUS_INDICATORS.md  STDIO_TO_RC_LOG_MIGRATION_GUIDE.md  STUB_DEPENDENCY_TRACKER.md  THIRD_PARTY_LICENSES.md  (+7 more)
firmware/2350/: CMakeLists.txt  platformio.ini
firmware/2350/src/: FreeRTOSConfig.h  main.cpp
graphify-out/: .curate_flag.json  .curate_state.json  .graphify_analysis.json  .graphify_labels.json  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
ground_station/: CMakeLists.txt  gs_spi.cpp  radio_rx.cpp
ground_station/lora_rx_simple/: lora_rx_simple.ino
ground_station/rfm69_rx_simple/: rfm69_rx_simple.ino
include/: debug.h
pio/: backup_timer.pio  heartbeat_watchdog.pio
profiles/: README.md  hab.cfg  passive.cfg  rocket.cfg
scripts/: README.md  _boot_parity_check.py  _rc_test_common.py  accel_cal_6pos.py  ack_stress_test.py  analyze_stack_usage.sh  bench_flight_sim.py  bench_sim.py  cla_collect.py  cli_test.py  codegen_soak_test.py  decode_flight_log.py  enhanced_fault_injection.py  eskf_gps_soak.py  generate_coverage_report.sh  generate_fpft.py  generate_profile.py  generate_replay_profiles.py  generate_wmm_table.py  graphify_curate.py  graphify_verify.py  i2c_soak_test.py  ivp27_28_test.py  ivp29_30_test.py  mavlink_validate.py  opt_ivp01_row10_dualcore_watch.gdb  rbm_check.py  render_dot.sh  replay_gate_test.py  replay_harness.py  replay_harness_host.py  run_clang_tidy.sh  run_cppcheck.sh  soak_10min.gdb  soak_30min.gdb  soak_gdb.gdb  soak_station_30min.gdb  soak_test.py  stage_t2_cheat.py  stage_t4_ambient.py  (+13 more)
src/: DataStructures.h  hooks.c  hooks.cpp  main.c  main.cpp  shared_state.cpp  simple_test.c
standards/: ACCEPTED_STANDARDS_DEVIATIONS.md  AP_DEPENDENCY_POLICY.md  AUDIT_GUIDANCE.md  AUDIT_REMEDIATION.md  CODING_STANDARDS.md  DEBUG_OUTPUT.md  GIT_WORKFLOW.md  HW_GATE_DISCIPLINE.md  RF_COMPLIANCE.md  RP2350_ERRATA.md  STANDARDS_AUDIT.md  STANDARDS_AUDIT_2026-02-07.md  STANDARDS_AUDIT_2026-04-28.md  STANDARDS_DEVIATIONS.md  VENDOR_GUIDELINES.md
starcom/: CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  STATUS.md  VERSIONING.md
test/: CMakeLists.txt  csv_loader.h  test_action_executor.cpp  test_baro_kf.cpp  test_calibration_lm.cpp  test_command_handler.cpp  test_confidence_gate.cpp  test_data_model.cpp  test_eskf_bierman.cpp  test_eskf_disable_brake.cpp  test_eskf_gps_update.cpp  test_eskf_mag_3axis.cpp  test_eskf_mag_update.cpp  test_eskf_propagation.cpp  test_eskf_reset.cpp  test_eskf_update.cpp  test_eskf_zupt.cpp  test_flight_director.cpp  test_flight_director_launch_abort.cpp  test_flight_director_replay.cpp  test_flight_table.cpp  test_go_nogo.cpp  test_guard_combinator.cpp  test_guards.cpp  test_hab_profile_data.h  test_haversine.cpp  test_health_monitor.cpp  test_innovation_monitor.cpp  test_log_decimator.cpp  test_mahony.cpp  test_mat.cpp  test_mavlink_rx.cpp  test_mission_profile.cpp  test_notify.cpp  test_pcm_frame.cpp  test_phase_qr.cpp  test_prearm_fail_ticks.cpp  test_qep_smoke.cpp  test_quat.cpp  test_rc_log.cpp  (+9 more)
test/data/: banked_turn_10s.csv  banked_turn_10s_ref.csv  const_accel_30s.csv  const_accel_30s_ref.csv  const_turn_10s.csv  const_turn_10s_ref.csv  const_velocity_30s.csv  const_velocity_30s_ref.csv  static_1min.csv  static_1min_ref.csv
test/data/reference/: banked_turn_10s_ref.csv  const_accel_30s_ref.csv  const_turn_10s_ref.csv  const_velocity_30s_ref.csv  static_1min_ref.csv
test/replay/: output_log.h  replay_harness.cpp  sensor_log.h
test/scripts/: generate_synthetic.py
tests/: RC_OS_VERIFICATION.md
tools/: recency_audit.py  state_to_dot.py
tools/i2c_bare_test/: CMakeLists.txt
(+791 files in other folders)
